# learn_simd

./: CMakeLists.txt  fix_parser.cpp  line_parser.cpp  main.cpp  msg.hpp  ord_parser.cpp  readme.md
include/: CSVTable.h  col_type.h  csv_builder.h  csv_parser.h  fix_parser.hpp  line_parser.hpp  ord_parser.hpp
src/: fix_parser.cpp  line_parser.cpp  main.cpp  ord_parser.cpp
